# ioc_assignments

assignment1/: description.txt  image_publisher.py  package.xml
assignment1/code/: image_processor.py
assignment2/: base_extension.urdf  description.txt  gripper.urdf  simple_arm.urdf
assignment2/code/: camera.urdf
